# formality

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp
include/: formality.h  machine.h  state.h  transition.h
src/: machine.cpp  state.cpp  transition.cpp
